Fix couple of glitches in mobile theme: - Fix extra gap between topmenu icons - Shows no print button - Resize sidebox

--- a/pixelegg/css/mobile.css
+++ b/pixelegg/css/mobile.css
@@ -6335,22 +6335,6 @@ a.textSidebox {
   #egw_fw_basecontainer #egw_fw_top_toolbar div.egw_fw_ui_tabs_header span h1 {
     display: none;
   }
-  #egw_fw_basecontainer div#egw_fw_logout {
-    left: 310px;
-    top: 20px;
-    width: 24px;
-    height: 24px;
-    background-size: 24px 24px;
-    z-index: 1;
-  }
-  #egw_fw_basecontainer div#egw_fw_print {
-    left: 268px;
-    top: 20px;
-    width: 24px;
-    height: 24px;
-    background-size: 24px 24px;
-    z-index: 1;
-  }
   #egw_fw_basecontainer .egw_fw_top_toolbar > div:hover {
     -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
@@ -6381,7 +6365,7 @@ a.textSidebox {
     box-shadow: inset 1px 2px 1px rgba(0, 0, 0, 0.5);
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items {
-    width: 250px;
+    width: 280px;
     display: inline;
     float: left;
     position: fixed;
@@ -6397,12 +6381,22 @@ a.textSidebox {
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul li {
     display: -webkit-inline-box;
     display: -moz-inline-box;
-    padding-right: 0.5em;
+    padding: 2px;
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul li:hover {
     -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.5);
     box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.5);
+  }
+  #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_logout:before {
+    content: "";
+    background-image: url(../images/logout.png);
+    background-repeat: no-repeat;
+    width: 32px;
+    height: 32px;
+    background-size: 30px 30px;
+    display: inline-block;
+    background-position: center;
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_home:before {
     content: " ";
@@ -6422,6 +6416,7 @@ a.textSidebox {
     height: 32px;
     background-size: 32px 32px;
     display: inline-block;
+    background-position: center;
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_prefs:active {
     -webkit-transform: rotate(180deg);
@@ -6435,6 +6430,7 @@ a.textSidebox {
     background-size: 32px 32px;
     background-image: url(../images/topmenu_items/mobile/access.png);
     display: inline-block;
+    background-position: center;
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_cats:before {
     background-image: url(../images/topmenu_items/mobile/category.png);
@@ -6444,6 +6440,7 @@ a.textSidebox {
     height: 32px;
     background-size: 32px 32px;
     display: inline-block;
+    background-position: center;
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_password:before {
     background-image: url(../images/topmenu_items/mobile/password.png);
@@ -6453,6 +6450,7 @@ a.textSidebox {
     height: 32px;
     background-size: 32px 32px;
     display: inline-block;
+    background-position: center;
   }
   #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_manual:before {
     background-image: url(../images/topmenu_items/mobile/help.png);
@@ -6471,11 +6469,7 @@ a.textSidebox {
     height: 32px;
     background-size: 32px 32px;
     display: inline-block;
-  }
-  #egw_fw_basecontainer div#egw_fw_topmenu_items ul a#topmenu_search:active {
-    transform: scale(-2);
-    -webkit-transform: scale(-2);
-    -webkit-transition: 1s ease;
+    background-position: center;
   }
   .egw_fw_ui_tabs_header {
     margin: 0px 0 0 0;
@@ -6963,9 +6957,7 @@ a.textSidebox {
   .sidebar-toggle #egw_fw_sidebar #egw_fw_sidemenu .egw_fw_ui_sidemenu_entry_header_active h1 {
     display: none;
   }
-  .sidebar-toggle #egw_fw_logout,
-  .sidebar-toggle #egw_fw_topmenu_items,
-  .sidebar-toggle #egw_fw_print {
+  .sidebar-toggle #egw_fw_topmenu_items {
     display: none !important;
   }
   .tabs-header-portrait-collapsed {
